--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "",
+  "homepage": "https://dey-subhajit.github.io/weather-forcust/",
   "name": "weather_report",
   "version": "0.1.0",
   "private": true,
